--- a/index.html
+++ b/index.html
@@ -129,15 +129,15 @@
          
 
               <p>
-                  Hi, my name is Angelo. Here are is a some things about me. I was born in the Phillipines but was mainly raised in Wellington, New Zealand. My favourite hobbies are playing drums, watching movies, watching basketball, playing games, and photography.
+                 Hi, my name is Angelo. Some background information about me is that I was born in the Philippines, but was mainly raised in Wellington, New Zealand.
               </p>
 
               <p>
-                Throught high school, there was a point and time where I wasn't sure what I wanted to do. I kept asking my self, "should I do photography, should I be a musician, teach drums?" This was at the time where start asking you, "oh, what are you going to do in university?" However, when I was at the end of year 11 in high school, my family had decided to move to Auckland to pursue jobs, university for my brother, and new opportunities.
+               I first found my passion for creativity through music. I played instruments such as the guitar, bass, piano and the drums being my main instrument. I feel in love with being able to create something that would please people.
               </p>
 
               <p>
-                When I started in year 12 at a new school and new city, it was all overwhelming. The hardest part for me was telling my parents that I didn't want to take physics, or science but instead, I took music and VAD (visual communication design). However, when I finished highschool I had a new passion. That passion was designing websites which is how I got into majoring in interactive design.
+                However my love for being creative and design would grow bigger during my high school years. During the year 2018, we had decided to make the move to Auckland after living in Wellington for over 13 years. I had originally wanted to pursue architect, but unfortunately things didn’t work out. So I had a go with design and fell in love with create posters, mobile apps, banners, swing tags, and more. The thing that I loved doing out of all those things were when I was designing the website interface. Although at the time, they we’re that good, it sparked something in me that made me was to continue designing websites, and here we are I guess. Welcome to my portfolio.
               </p>
 
               <div class="header-links-main">
