--- a/index.html
+++ b/index.html
@@ -129,15 +129,15 @@
          
 
               <p>
-                 Hi, my name is Angelo. Some background information about me is that I was born in the Philippines, but was mainly raised in Wellington, New Zealand.
+                Hello, a brief introduction of myself to welcome you to my portfolio. My name is Angelo. Born in the Philippines and migrated with my parents and sibling to New Zealand. I consider myself a Wellingtonian, as we lived there for almost 13 years until we moved to Auckland.
               </p>
 
               <p>
-               I first found my passion for creativity through music. I played instruments such as the guitar, bass, piano and the drums being my main instrument. I feel in love with being able to create something that would please people.
+              My passion is playing musical instruments like guitar, bass, piano, and drums. Through music, I can express my creativity and feel accomplished when people appreciate my music. My passion for creativity and design has grown significantly during high school.
               </p>
 
               <p>
-                However my love for being creative and design would grow bigger during my high school years. During the year 2018, we had decided to make the move to Auckland after living in Wellington for over 13 years. I had originally wanted to pursue architect, but unfortunately things didn’t work out. So I had a go with design and fell in love with create posters, mobile apps, banners, swing tags, and more. The thing that I loved doing out of all those things were when I was designing the website interface. Although at the time, they we’re that good, it sparked something in me that made me was to continue designing websites, and here we are I guess. Welcome to my portfolio.
+               I learned to design business promotion materials, posters and banners, and it became my hobby. Because of my passion, I decided to pursue a career in interactive design, where I gained more knowledge and experience designing websites. My portfolio features some of my works showcasing my creativity.  Enjoy.
               </p>
 
               <div class="header-links-main">
