--- a/project-1.html
+++ b/project-1.html
@@ -95,7 +95,7 @@
           <span>Dribble</span></a>
 
 
-        <a href="#"><i class="fas fa-envelope"></i>
+        <a href="mailto:angelo.sambajon@gmail.com"><i class="fas fa-envelope"></i>
           <span>Gmail</span></a>
       </div>
     </div>
@@ -237,7 +237,6 @@
 
 
           <figure class="card3">
-            <h3></h3>
 
             <p> Another thing that I done in the group was to create a motion capture penguin as one of the concept
               installations. This first image on the left is a image that a group member found which was what inspired
@@ -309,15 +308,7 @@
             <h3></h3>
 
             <p> This is the final result. As you can see with the code, about 90% of it was JavaScript which was
-              something that I am still quite new to. I will put a link bellow that leads to the final output. For it to
-              work, you will need to have either a webcame or the camera with your computer. You will need it allow your
-              camera and to get the best result, make sure to take a step back and have the lights on.</p>
-
-              <p>A side note when viewing the websites. When opening, you will be given you a warning about a risk. All you need to do is click on advance and then click proceed.</p>
-
-            <div class="container-a">
-              <a href="https://angelo.designstudent.nz/penguin/" target="_blank">Click here</a>
-            </div>
+              something that I am still quite new to. The live verison will be up soon, and I unfortuniatly don't have any vidoes of the prototype.</p>
 
           </figure>
         </div>
@@ -336,7 +327,7 @@
         <footer class="footer">
           <div class="container-footer">
             <div class="row">
-              <div class="footer-col">
+              <!-- <div class="footer-col">
                 <h4>company</h4>
                 <ul>
                   <li><a href="#">More</a></li>
@@ -344,7 +335,7 @@
                   <li><a href="#">privacy policy</a></li>
                   <li><a href="#">affiliate program</a></li>
                 </ul>
-              </div>
+              </div> -->
               <!-- <div class="footer-col">
                 <h4>get help</h4>
                 <ul>
@@ -371,7 +362,7 @@
                       class="fab fa-instagram"></i></a>
                   <a href="https://www.tumblr.com/blog/uiangelo-design" target="_blank"><i class="fab fa-tumblr"></i>
                     <a href="https://dribbble.com/Dr_Angelo" target="_blank"><i class="fab fa-dribbble"></i>
-                      <a href="#"><i class="fas fa-envelope"></i></a>
+                      <a href="mailto:angelo.sambajon@gmail.com"><i class="fas fa-envelope"></i></a>
                 </div>
               </div>
             </div>
