--- a/project-3.html
+++ b/project-3.html
@@ -75,8 +75,8 @@
 
         <div class="header4-wrapper">
             <!-- <h3>WELCOME TO MY PORTFOLIO</h3> -->
-            <h1>2021 Enterprise App</h1>
-            <p>Background image creidts - Stan Honda/AFP/Getty Images </p>
+            <h1>2022 Capstone Project</h1>
+            <!-- <p>Background image creidts - Stan Honda/AFP/Getty Images </p> -->
 
             <div class="header4-links">
                 <a href="#summary">Summary of the project</a>
@@ -95,7 +95,7 @@
                     <span>Dribble</span></a>
 
 
-                <a href="#"><i class="fas fa-envelope"></i>
+                <a href="mailto:angelo.sambajon@gmail.com"><i class="fas fa-envelope"></i>
                     <span>Gmail</span></a>
             </div>
         </div>
@@ -122,7 +122,47 @@
                     <figure class="card2">
                         <h2>SUMMARY</h2>
 
-                        <p>At the start of this project, we had to come up with an enterprise app. I endedup going with the idea of bring in sleeppods into the campus and designing an app that allows poeple to book these sleep pods.  </p>
+                        <h4>Introduction</h4>
+                        <p>"How can we make websites more memorable, and increase user interaction when viewing a
+                            product?"</p>
+
+                        <p>The way that this idea came to be is that when I was scrolling through my Instagram and would
+                            see the
+                            accounts that would post UI and UX content, I would sort of sit there and think to myself
+                            “man, why is it all the
+                            same layout?” One of the posts I can across was one selling plants and the other one was
+                            supposedly a dating
+                            website.</p>
+
+                         <h4>Research Insights</h4>  
+                         <p>At the start of this project, I really wanted to focus on trying to redesign how websites look, feel, are laid out,
+                            how things move, etc. I essentially would be trying to go against the grain of designing websites. Challenging
+                            people’s expectations and experimenting with that. However, as things progressed and I had a better insight
+                            as to what other people thought about websites being similar to one another and what their opinions are. I
+                            would see that people actually liked familiarity and that people would prefer it if they knew where things were
+                            and what things did. Some people also stated some of their frustration with trying to use websites that were
+                            designed the conventional way. They stated that it was annoying to use, they probably wouldn’t go back on
+                            that site just because the viewing experience wasn’t the best, and that there needed to be a balance between
+                            showing off fancy effects with usability. Another thing that people had stated was that although they liked
+                            that websites looked similar to one another, they would find it quite boring with the same layout over and over
+                            again, hard to differentiate, and sometimes hard to remember which website they were on last.</p> 
+
+
+                            <h4>Approach</h4>
+                            <p>The approach of my project was to investigate new ways of viewing a product and how it can be more
+                                engaging for users. The methodology that I used was doing some li-fi and hi-fi prototyping and doing some
+                                user testing. One of the key tools that I used was a new 3D platform called spline 3D. This allowed me to play
+                                around with some unique features, for example, a follow mouse function where you can get a 3d element to
+                                follow your mouse, a mouse hover, setting keys as a command, and more.</p>
+
+
+                                <h4>Conclusion</h4>
+                                <p>I think that the final outcome of my work was pretty close to what I had envisioned and I would say I’m pretty
+                                    happy with the way that things turned out. I would describe this project to be something that would showcase
+                                    the importance of interactive design and how it can benefit users. I think that when it comes to designing
+                                    websites, there’s still room to grow with all the new platforms and applications coming out. I believe that this
+                                    journey through capstone has helped me set a direction for where I want to go in the industry. I would just like
+                                    to acknowledge all the help, support, and feedback given throughout this project.</p>
 
                         <div class="header-links-main">
                             <a href="#work">Work I did</a>
@@ -144,25 +184,18 @@
 
         <section id="work">
             <div class="wrapper">
-                <h2>Enterprise App</h2>
 
                 <div class="card3-grid">
 
                     <figure class="card3">
-                        <p>I will first show the sketches and lo-fi prototypes. We first started off by listing some of the struggles/problems that we face or find interesting. The one I ended up going with was not getting enough sleep. My idea was to introduce sleep pods to the campus and design an interface for it.</p>
-
-                        <p>The name that I first came up with was Z pods, but later change it to ZnoozePods. Bellow are my logo sketches. I tried to play around with some imagery such as the pods and a person sleeping.</p>
-
-                        <p>With the lo-fi wireframe, the idea that I had was that the users were able to book pods, see how long they have left with their booking, find pods similar to how you try to find slectric scooters, and I wanted to keep the design simple. I also sketched a lo-fi wireframe of what a website would look like to tell people more about the app or the idea.</p>
-
-                        <p>Lastly I drew up a userflow to help better userstand how the app would flow when people are using it.</p>
+                        <img src="img/angelosambajon01.jpg" alt="">
                     </figure>
 
 
                     <figure class="card3">
                         <h3></h3>
 
-                        <img src="img/enterpise-app2.jpg" alt="">
+                        <img src="img/angelosambajon02.jpg" alt="">
 
                     </figure>
 
@@ -172,12 +205,12 @@
                 <div class="card3-grid">
 
                     <figure class="card3">
-                        <img src="img/enterpise-app3.jpg" alt="">
+                        <img src="img/angelosambajon03.jpg" alt="">
                     </figure>
 
 
                     <figure class="card3">
-                        <img src="img/enterpise-app4.jpg" alt="">
+                        <img src="img/angelosambajon04.jpg" alt="">
                     </figure>
 
 
@@ -186,12 +219,12 @@
                 <div class="card3-grid">
 
                     <figure class="card3">
-                        <img src="img/enterpise-app5.jpg" alt="">
+                        <img src="img/angelosambajon05.jpg" alt="">
                     </figure>
 
 
                     <figure class="card3">
-                        <img src="img/enterpise-app6.jpg" alt="">
+                        <img src="img/angelosambajon06.jpg" alt="">
                     </figure>
 
 
@@ -200,46 +233,41 @@
 
                 <div class="card3-grid">
                     <figure class="card3">
-                        <img src="img/enterpise-app7.jpg" alt="">
+                        <img src="img/angelosambajon07.jpg" alt="">
 
                     </figure>
 
 
                     <figure class="card3">
-                        <img src="img/enterpise-app8.jpg" alt="">
+                        <img src="img/angelosambajon08.jpg" alt="">
                     </figure>
                 </div>
 
                 <div class="card3-grid">
                     <figure class="card3">
-                        <p>Here are my hi-fi wireframes. I went with a light green colour, which didn't pop out to much. I kept it calm and user friendly to look and naviate through. The image on the left showcases what the first version of userflow looks like. The image bellow shows what the sign up page would look like.</p>
+                        <img src="img/angelosambajon09.jpg" alt="">
                     </figure>
 
 
                     <figure class="card3">
-                        <img src="img/enterpise-app9.jpg" alt="">
+                        <img src="img/angelosambajon10.jpg" alt="">
                     </figure>
                 </div>
 
 
                 <div class="card3-grid">
                     <figure class="card3">
-                        <img src="img/enterpise-app10.jpg" alt="">
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/rCX_gI9TW40" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                     </figure>
 
 
                     <figure class="card3">
-                        <p>The link to the final product will be linked bellow. For this one, users will need to change the dimensions by right clicking, select inspect, and then change to the iphone 12 pro. </p>
-                        <p>A side note when viewing the websites. When opening, you will be given you a warning about a risk. All you need to do is click on advance and then click proceed.</p>
-
-                        <div class="container-a">
-                            <a href="https://angelo.designstudent.nz/enterprise-app/" target="_blank" >Click here</a>
-                          </div>
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/x0-XHhGUGyc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </figure>
                 </div>
 
-               
+
 
 
                 <div class="space"></div>
@@ -258,7 +286,7 @@
                 <footer class="footer">
                     <div class="container-footer">
                         <div class="row">
-                            <div class="footer-col">
+                            <!-- <div class="footer-col">
                                 <h4>company</h4>
                                 <ul>
                                     <li><a href="#">More</a></li>
@@ -266,7 +294,7 @@
                                     <li><a href="#">privacy policy</a></li>
                                     <li><a href="#">affiliate program</a></li>
                                 </ul>
-                            </div>
+                            </div> -->
                             <!-- <div class="footer-col">
                 <h4>get help</h4>
                 <ul>
@@ -295,7 +323,8 @@
                                             class="fab fa-tumblr"></i>
                                         <a href="https://dribbble.com/Dr_Angelo" target="_blank"><i
                                                 class="fab fa-dribbble"></i>
-                                            <a href="#"><i class="fas fa-envelope"></i></a>
+                                            <a href="mailto:angelo.sambajon@gmail.com"><i
+                                                    class="fas fa-envelope"></i></a>
                                 </div>
                             </div>
                         </div>
