--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 <a href="project-2.html"><img src="img/yr2_summative-4.jpg" alt="">
 
                       <figcaption>
-                          <h3>2021 Final Project</h3>
+                          <h3>2022 Group Project</h3>
                       </figcaption>
                   </a>
               </figure>
