--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
               <!-- Card start -->
               <figure class="card">
-                <a href="project-2.html"><img src="img/yr2_summative-4.jpg" alt="">
+                <a href="project-2.html"><img src="img/akl-finalmk2.png" alt="">
 
                       <figcaption>
                           <h3>2022 Group Project</h3>
