--- a/project-2.html
+++ b/project-2.html
@@ -230,7 +230,7 @@
 
 
                     <figure class="card3">
-                        <img src="img/group2022-12.jpg" alt="">
+                        <img src="img/group2022-12mk2.jpg" alt="">
                     </figure>
                 </div>
 
